add static version of each pokemon and added styling

--- a/pokemon/index.html
+++ b/pokemon/index.html
@@ -1,26 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link href="assets/css/index.css" rel="stylesheet" />
-</head>
-<body>
-    <nav>
-        <div id="logo"></div>
-    </nav>
-    <div id="home">
-        <div id="search-sort-filter-container"></div>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Document</title>
+        <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+        <link href="assets/css/index.css" rel="stylesheet" />
+    </head>
+    <body>
+        <nav>
+            <div id="logo"></div>
+        </nav>
+        <div id="home">
+            <div id="search-sort-filter-container"></div>
 
-        <div id="list">
-            <div class="card">
-                <div class="thumbnail" style="background-image: url('https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/official-artwork/shiny/4.png')"></div>
-                <div class="details"></div>
+            <div id="list">
+                <div class="card">
+                    <div
+                        class="thumbnail"
+                        style="
+                            background-image: url('https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/official-artwork/25.png');
+                        "
+                    ></div>
+                    <div class="details">
+                        <div>Name: Pikachu</div>
+                        <div>Type: Electric</div>
+                        <div>Height: 1 foot 4 inches</div>
+                        <div>Weight: 13 lb(s)</div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div
+                        class="thumbnail"
+                        style="
+                            background-image: url('https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/official-artwork/4.png');
+                        "
+                    ></div>
+                    <div class="details">
+                        <div>Name: Chamander</div>
+                        <div>Type: Fire</div>
+                        <div>Height: 2 feet(s)</div>
+                        <div>Weight: 18 lb(s)</div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div
+                        class="thumbnail"
+                        style="
+                            background-image: url('https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/official-artwork/7.png');
+                        "
+                    ></div>
+                    <div class="details">
+                        <div>Name: Squirtle</div>
+                        <div>Type: Water</div>
+                        <div>Height: 1 foot 8 inches</div>
+                        <div>Weight: 20 lb(s)</div>
+                    </div>
+                </div>
             </div>
-            
         </div>
-    </div>
-    <script src="assets/js/index.js"></script>
-</body>
+        <script src="assets/js/index.js"></script>
+    </body>
 </html>
