WIP: adding filter type icons

--- a/pokemon/index.html
+++ b/pokemon/index.html
@@ -12,7 +12,13 @@
             <div id="logo"></div>
         </nav>
         <div id="home">
-            <div id="search-sort-filter-container"></div>
+            <div id="search-sort-filter-container">
+                <div class="icon-container">
+                    <img src="assets/images/icons/fire.png" alt="fire type" />
+                    <div>Fire</div>
+                </div>
+
+            </div>
 
             <div id="list">
                 <div class="card">
