WIP: added icons to home page

--- a/pokemon/index.html
+++ b/pokemon/index.html
@@ -17,6 +17,23 @@
                     <img src="assets/images/icons/fire.png" alt="fire type" />
                     <div>Fire</div>
                 </div>
+                <div class="icon-container">
+                    <img src="assets/images/icons/lightning.png" alt="fire type" />
+                    <div>Lightning</div>
+                </div>
+                <div class="icon-container">
+                    <img src="assets/images/icons/water.png" alt="fire type" />
+                    <div>Water</div>
+                </div>
+                <div class="icon-container">
+                    <img src="assets/images/icons/grass.png" alt="fire type" />
+                    <div>Grass</div>
+                </div>
+                <div class="icon-container">
+                    <img src="assets/images/icons/bug.png" alt="fire type" />
+                    <div>Bug</div>
+                </div>
+                
 
             </div>
 
