--- a/pokemon/index.html
+++ b/pokemon/index.html
@@ -12,28 +12,7 @@
             <div id="logo"></div>
         </nav>
         <div id="home">
-            <div id="search-sort-filter-container">
-                <div class="icon-container">
-                    <img src="assets/images/icons/fire.png" alt="fire type" />
-                    <div>Fire</div>
-                </div>
-                <div class="icon-container">
-                    <img src="assets/images/icons/lightning.png" alt="fire type" />
-                    <div>Lightning</div>
-                </div>
-                <div class="icon-container">
-                    <img src="assets/images/icons/water.png" alt="fire type" />
-                    <div>Water</div>
-                </div>
-                <div class="icon-container">
-                    <img src="assets/images/icons/grass.png" alt="fire type" />
-                    <div>Grass</div>
-                </div>
-                <div class="icon-container">
-                    <img src="assets/images/icons/bug.png" alt="fire type" />
-                    <div>Bug</div>
-                </div>
-            </div>
+            <div id="search-sort-filter-container"></div>
             <div>
                 <div class="custom-shape-divider-top-1701369213">
                     <svg
@@ -60,50 +39,7 @@
                 </div>
             </div>
 
-            <div id="list">
-                <div class="card">
-                    <div
-                        class="thumbnail"
-                        style="
-                            background-image: url('https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/official-artwork/25.png');
-                        "
-                    ></div>
-                    <div class="details">
-                        <div>Name: Pikachu</div>
-                        <div>Type: Electric</div>
-                        <div>Height: 1 foot 4 inches</div>
-                        <div>Weight: 13 lb(s)</div>
-                    </div>
-                </div>
-                <div class="card">
-                    <div
-                        class="thumbnail"
-                        style="
-                            background-image: url('https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/official-artwork/4.png');
-                        "
-                    ></div>
-                    <div class="details">
-                        <div>Name: Chamander</div>
-                        <div>Type: Fire</div>
-                        <div>Height: 2 feet(s)</div>
-                        <div>Weight: 18 lb(s)</div>
-                    </div>
-                </div>
-                <div class="card">
-                    <div
-                        class="thumbnail"
-                        style="
-                            background-image: url('https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/official-artwork/7.png');
-                        "
-                    ></div>
-                    <div class="details">
-                        <div>Name: Squirtle</div>
-                        <div>Type: Water</div>
-                        <div>Height: 1 foot 8 inches</div>
-                        <div>Weight: 20 lb(s)</div>
-                    </div>
-                </div>
-            </div>
+            <div id="list"></div>
         </div>
         <script src="assets/js/index.js"></script>
     </body>
