--- a/pokemon/index.html
+++ b/pokemon/index.html
@@ -41,6 +41,6 @@
 
             <div id="list"></div>
         </div>
-        <script src="assets/js/index.js"></script>
+        <script type="module" src="assets/js/index.js"></script>
     </body>
 </html>
