added a single pokemon page

--- a/pokemon/singlePokemon.html
+++ b/pokemon/singlePokemon.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="assets/css/singlePokemon.css" rel="stylesheet"/>
 </head>
 <body>
     <h1>Single Pokemon</h1>
+
+    <script src="assets/js/singlePokemon.js"></script>
 </body>
 </html>
