--- a/Workbook8/Exercises/postPutDelete/editToDo.html
+++ b/Workbook8/Exercises/postPutDelete/editToDo.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Document</title>
-        <link href="css/createToDo.css" rel="stylesheet" />
+        <link href="css/editToDo.css" rel="stylesheet" />
     </head>
     <body>
         <ul>
@@ -16,9 +16,9 @@
             </li>
         </ul>
 
-        <h1>Create</h1>
+        <h1>Edit</h1>
 
-        <form id="create-todo-form">
+        <form id="edit-todo-form">
             <div id="response-message"></div>
             <div>
                 <label for="user-id">Please enter user id:</label>
@@ -33,7 +33,8 @@
                 <input id="submit-btn" type="submit" />
             </div>
         </form>
+        <button id="cancel-btn">Cancel</button>
 
-        <script src="js/createToDo.js"></script>
+        <script src="js/editToDo.js"></script>
     </body>
 </html>
