finished searching,sorting, filtering

--- a/pokemonPlayground/index.html
+++ b/pokemonPlayground/index.html
@@ -18,7 +18,7 @@
             <option>Weight</option>
             <option>Type</option>
         </select>
-        <label for="isDefault">Is default? </label>
+        <label for="isDefault">Show only default pokemon?</label>
         <input id="isDefault" type="checkbox" />
 
         <hr />
