--- a/Workbook8/CodeAlongs/coursesTwoExercise/frontend/getAllCourses.html
+++ b/Workbook8/CodeAlongs/coursesTwoExercise/frontend/getAllCourses.html
@@ -21,6 +21,8 @@
 
         <h1>Display Courses</h1>
 
+        <div id="courses-container"></div>
+
         <script src="scripts/getAllCourses.js"></script>
     </body>
 </html>
