--- a/Workbook8/CodeAlongs/coursesTwoExercise/frontend/getOneCourse.html
+++ b/Workbook8/CodeAlongs/coursesTwoExercise/frontend/getOneCourse.html
@@ -21,7 +21,9 @@
 
         <h1>Display Course</h1>
 
+        <div id="course-container"></div>
+        <button id="delete-btn">Delete</button>
+
         <script src="scripts/getOneCourse.js"></script>
-        <script src="scripts/deleteCourse.js"></script>
     </body>
 </html>
