added styling and more details to singlePokemon page

--- a/pokemon/singlePokemon.html
+++ b/pokemon/singlePokemon.html
@@ -7,8 +7,8 @@
     <link href="assets/css/singlePokemon.css" rel="stylesheet"/>
 </head>
 <body>
-    <h1>Single Pokemon</h1>
+    <div id="single-pokemon"></div>
 
-    <script src="assets/js/singlePokemon.js"></script>
+    <script type="module" src="assets/js/singlePokemon.js"></script>
 </body>
 </html>
