added delete/update buttons

--- a/pokemon/updatePokemon.html
+++ b/pokemon/updatePokemon.html
@@ -4,11 +4,10 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Document</title>
-        <link href="assets/css/singlePokemon.css" rel="stylesheet" />
+        <link href="assets/css/updatePokemon.css" rel="stylesheet" />
     </head>
     <body>
-        <div id="single-pokemon"></div>
-
-        <script type="module" src="assets/js/singlePokemon.js"></script>
+        <h1>Update Pokemon</h1>
+        <script type="module" src="assets/js/updatePokemon.js"></script>
     </body>
 </html>
