--- a/pokemon/updatePokemon.html
+++ b/pokemon/updatePokemon.html
@@ -8,13 +8,7 @@
     </head>
     <body>
         <h1>Update Pokemon</h1>
-        <!-- {
-              "official_artwork_default": "https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/official-artwork/25.png",
-              "height": 4,
-              "weight": 60,
-              "isDefault": true,
-            } -->
-        <form>
+        <form id="update-form">
             <div>
                 <label for="image">Image</label>
                 <input id="image" type="text" />
